my-demo-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-demo-app
  namespace: demo-app
  labels:
    app: my-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-demo-app
  template:
    metadata:
      labels:
        app: my-demo-app
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/nginx/nginx:1.21
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
