eks-sample-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-linux-loadbalancer
  namespace: ns-eks-test
  labels:
    app: eks-sample-linux-app
spec:
  type: LoadBalancer
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
