eks-sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-linux-service
  namespace: ns-eks-test
  labels:
    app: eks-sample-linux-app
    Owner: Nikhil
spec:
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
