hello-world-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: ns-eks-test-2
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-world
