my-demo-app-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-demo-app-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: my-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
