my-demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-demo-app-nodeport
  namespace: demo-app
spec:
  type: NodePort
  selector:
    app: my-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
