ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
  namespace: ns-eks-test-2
spec:
  ingressClassName: nginx
  rules:
  #- host: host1.domain.ext
  -  http:
        paths:
        - pathType: Prefix
          path: "/ns2/hello"
          backend:
            service:
              name: hello-world
              port:
                number: 80
